# polymarket-copy-bot

./: .env.example  Cargo.toml  README.md  package.json
rust/: Cargo.toml  README.md
rust/src/: balance.rs  config.rs  holdings.rs  lib.rs  main.rs
rust/src/chain/: contracts.rs  mod.rs
rust/src/clob/: client.rs  credential.rs  mod.rs
rust/src/feed/: mod.rs
rust/src/order/: mod.rs
rust/src/redemption/: mod.rs
src/: arbitrage_detector.rs  bot.rs  config.rs  copy_trader.rs  index.ts  main.rs  on_chain_monitor.rs  order_executor.rs  polymarket_client.rs  risk_manager.rs  wallet_monitor.rs
