[package]
name = "polymarket-arbitrage-copy-bot"
version = "0.1.0"
edition = "2021"
description = "Polymarket arbitrage + copy trading bot in Rust"
authors = ["cryp_mancer"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
ethers = { version = "2.0", features = ["full"] }
dotenv = "0.15"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
