[package]
name = "polymarket-copy-bot"
version = "1.0.0"
edition = "2021"
description = "Polymarket copy trading bot — real-time mirror trading with configurable size and auto-redemption"
authors = [""]
license = "ISC"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
base64 = "0.21"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
ethers = { version = "2.0", features = ["abigen", "ws"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
